# hblog

./: README.markdown  about.markdown  hblog.cabal  hblog.hs
posts/: 2015-09-11-cool-latex.markdown  2015-09-11-linux.markdown  2015-09-11-setup-emacs-linux.markdown  2015-09-17-healthcare.markdown  2015-09-21-ocaml-love.markdown  2015-10-07-elegant.markdown  2015-10-12-monads-you-can-understand.markdown  2015-10-20-so-youre-learning-ocaml.markdown  2015-12-03-write_ocaml_on_node.markdown  2016-01-23-calling-ocaml-from-objective-c.markdown  2016-01-24-see-http-traffic-with-proxy.markdown  2016-02-22-ios-cross-compiler.markdown  2016-02-24-tyxml-ocaml-example.markdown  2016-02-25-lets-hack-on-flow.markdown  2016-02-26-lets-make-a-browser.markdown  2016-03-02-emacs-for-objc.markdown  2016-03-06-get-date-string-in-ocaml.markdown  2016-03-07-dga-padcrypt-ocaml.markdown  2016-03-15-building-xen-arm-from-source.markdown  2016-03-22-simple-timeouts.markdown  2016-05-21-using-lwt-preemptive.markdown  2016-07-17-js-of-ocaml-usage.markdown  2016-07-18-imperative-traversal-ocaml.markdown  2016-08-31-grabbing-function-location.markdown  2016-09-20-webdev-setup.markdown  2016-11-03-using-javascriptcore.markdown  2016-12-23-async-promises-node.markdown  2017-01-08-variants-in-cpp.markdown  2017-01-09-calling-google-closure-and-with-jni.markdown  2017-01-10-small-ocaml-object-annoyance.markdown  2017-02-12-excellence-security-culture-armenia.markdown  2017-03-12-my-practical-armenia.markdown  2017-03-14-my-practical-armenia-part-two.markdown
templates/: default.html  footer.html  (+2 more)
